Fixed odd spacing when work images were different sizes

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -45,6 +45,7 @@ $slide-width: 50%
     margin-left: auto
     margin-right: auto
     color: $text-color
+    flex: 1
 
     @media only screen and (min-width: $breakpoint-tablet) and (max-width: $breakpoint-monitor-sm)
       margin-left: 5px
